Refactor for GraphQL Integration.
- Prune all service classes except GitHubAPIService as the single GraphQL client.
- Enhance JsonUtils for bidirectional Java–JSON serialization.
- Update application.properties with the GitHub GraphQL endpoint.
- Introduce ValidationUtils.validateGraphQLResponse(...) to enforce response integrity.
- Extend GitHubAPIService with sendGraphQLQuery(...) and stub getProjects(...).
- Repoint GitHubMinerController to use GitHubAPIService in lieu of ProjectService.
- Externalize the GraphQL query into a classpath resource and programmatically load it within GitHubAPIService.